# freetype-opengl-experiments

./: CMakeLists.txt  LICENSE  main.c
assets/: test.txt
src/: callbacks.h  constants.h  face_collection.cc  face_collection.h  main.cc  renderer.cc  renderer.h  state.cc  state.h  texture_atlas.cc  texture_atlas.h
